--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,7 @@
     "space-before-function-paren": 0,
     "react-native/no-unused-styles": 2,
     "quotes": ["error", "single"],
-    "react-native/no-color literals": 2,
+    "react-native/no-color-literals": 2,
     "react-native/no-inline-styles": 2,
     "@typescript-eslint/ban-types": 0
   },
