--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
     "react": "17.0.2",
-    "react-native": "0.67.3"
+    "react-native": "0.67.3",
+    "react-native-safe-area-context": "^4.1.2",
+    "react-native-screens": "^3.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -20,6 +23,8 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "^17.0.39",
     "@types/react-native": "^0.67.2",
+    "@types/styled-components": "^5.1.24",
+    "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "babel-jest": "^26.6.3",
@@ -33,7 +38,9 @@
     "lint-staged": "^12.3.5",
     "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "^2.5.1",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "styled-components": "^5.3.3",
+    "typescript": "^4.6.2"
   },
   "jest": {
     "preset": "react-native"
